crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/013.cypher
OPTIONAL MATCH (n) RETURN n; CALL db.schema.visualization()
